--- a/WebSecService/.htaccess
+++ b/WebSecService/.htaccess
@@ -1,4 +1,9 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteRule ^(.*)$ public/$1 [L]
+    RewriteEngine on
+    RewriteCond %{REQUEST_URL} !^ (public)
+    RewriteRule ^(.*)$ public/$1 (L)
+</IfModule>
+
+<IfModule mime_module>
+    AddHandler application/x-httpd-ea-php82 .php .php8 .phtml
 </IfModule>
